# pdfse

./: .gitignore  README.md  pyproject.toml
src/pdfse/: cli.py  core.py  dataset.py  extract.py  extractor.py  llm.py  machine.py  main.py  models.py  pdf.py  utils.py  wordspace.py
tests/: test_core.py  test_llm.py  test_wordspace.py
