[project]
name = "pdfse"
version = "0.1.0"
description = "PDF Schema Extractor"
authors = [
    {name = "Pedro Miranda",email = "mdeapedro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf (>=1.26.5,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "typer (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "pdfse", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
